--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <link href="bin/toolbar.css" rel="stylesheet">
   </head>
   <body>
+    <div class="sidebar">
+      <div class="pages">1</div>
+      <div class="words">200</div>
+      <div class="letters">500</div>
+    </div>
     <div class="menubar">
-        <div class="bar"></div>
+        <div class="bar">Odyssey 1.2: Untitled Document</div>
         <div class="minimize"></div>
         <div class="maximize"></div>
         <div class="exit"></div>
