--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <div class="letters">500</div>
     </div>
     <div class="menubar">
-        <div class="bar">Odyssey 1.2: Untitled Document</div>
+        <div class="bar">Odyseja 1.2 (alfa): Niezdefiniowany Dokument</div>
         <div class="minimize"></div>
         <div class="maximize"></div>
         <div class="exit"></div>
