--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     </div>
     <div class="toolbar">
       <div id="logo"><div></div></div>
+      <p id="ctx-menu">Narzędzia</p>
       <span id="bold"><b>B</b></span>
       <span id="italic"><i>I</i></span>
       <span id="underline"><u>U</u></span>
@@ -53,8 +54,11 @@
 
     </div>
     <div class="menu">
-      <a href="menu.html" onclick="return false">Powrót do menu</a>
-      <!-- TODO: Dropdown Menu here -->
+      <a href="index.html" onclick="return false">Odśwież dokument</a>
+    </div>
+    <div class="menu">
+      <button>Narzędzia</button>
+      <button>Widok</button>
     </div>
 
     <div class="iframe">
