--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,10 @@
             <div id="merge-tools">
               <p>Scalanie</p>
               <div id="ok"></div>
+              <div id="cancel"></div>
+            </div>
+            <div id="merge-docs">
+
             </div>
 
 
