--- a/public/index.html
+++ b/public/index.html
@@ -85,16 +85,19 @@
       <div class="fv-tools">
         <p>Pełny widok</p>
         <span id="trash" title="Usuń strony">
-        </span><span id="merge-btn" title="Scal strony"> <!-- To po to, żeby nie było stresującej spacji -->
+        </span><span id="move-btn" title="Przesuń strony"> <!-- To po to, żeby nie było stresującej spacji -->
         </span>
 
-          <div id="merge-bg">
-            <div id="merge-tools">
-              <p>Scalanie</p>
+          <div id="move-bg">
+            <div id="move-tools">
+              <p>Przesuwanie</p>
               <div id="ok"></div>
               <div id="cancel"></div>
             </div>
-            <div id="merge-docs">
+
+            <canvas id="move"></canvas>
+            
+            <div id="move-docs">
 
             </div>
 
