--- a/public/index.html
+++ b/public/index.html
@@ -85,18 +85,18 @@
       <div class="fv-tools">
         <p>Pełny widok</p>
         <span id="trash" title="Usuń strony">
-        </span><span id="move-btn" title="Przesuń strony"> <!-- To po to, żeby nie było stresującej spacji -->
+        </span><span id="move-btn" title="Edytor Łańcuchowy"> <!-- To po to, żeby nie było stresującej spacji -->
         </span>
 
           <div id="move-bg">
             <div id="move-tools">
-              <p>Przesuwanie</p>
+              <p>Edytor Łańcuchowy</p>
               <div id="ok"></div>
               <div id="cancel"></div>
             </div>
 
             <canvas id="move"></canvas>
-            
+
             <div id="move-docs">
 
             </div>
