--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
       <div class="fv-tools">
         <p>Pełny widok</p>
         <span id="trash" title="Usuń strony">
-        </span><disabled title="Musisz zaznaczyć ciąg kartek następujący po sobie"><span id="move-btn" disabled="true" title="Edytor Łańcuchowy"></disabled> <!-- To po to, żeby nie było stresującej spacji -->
+        </span><disabled title="Musisz zaznaczyć ciąg kartek następujący po sobie"><span id="move-btn" disabled="false" title="Edytor Łańcuchowy"></disabled> <!-- To po to, żeby nie było stresującej spacji -->
         </span>
 
           <div id="move-bg">
