--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="bin/toolbar.css" rel="stylesheet">
   </head>
   <body>
+    <audio src="arts/smooth-intro.mp3" autoplay></audio>
     <div id="all">
       <div id="bg"></div>
       <div id="image"><div></div></div>
