--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
       <div class="fv-tools">
         <p>Pełny widok</p>
         <span id="trash" title="Usuń strony">
-        </span><disabled title="Musisz zaznaczyć ciąg kartek następujący po sobie"><span id="move-btn" disabled="false" title="Edytor Łańcuchowy"></disabled> <!-- To po to, żeby nie było stresującej spacji -->
+        </span><disabled id="move" disabled="true" title="Musisz zaznaczyć ciąg kartek następujących po sobie"><span id="move-btn" disabled="false" title="Edytor Łańcuchowy"></disabled> <!-- To po to, żeby nie było stresującej spacji -->
         </span>
 
           <div id="move-bg">
@@ -95,7 +95,7 @@
               <div id="ok"></div>
               <div id="cancel"></div>
             </div>
-            
+
             <div id="move-docs">
 
             </div>
