--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,9 @@
 
         <!-- TODO: Add some options here! -->
       </div>
+      <div id="pages">
+        <div id="merge-all" title="Scal wszystkie strony"></div>
+      </div>
 
     </div>
     <div class="menu">
@@ -81,6 +84,7 @@
     <div class="menu">
       <button>Narzędzia</button>
       <button>Widok</button>
+      <button>Strony</button>
     </div>
     <div class="full-view">
       <div class="fv-tools">
@@ -113,15 +117,29 @@
     </div>
     <iframe name="textField" width="" height="">
     </iframe>
+
+
+
+
     <div class="move right">
       <span>></span>
     </div>
     </div>
     <p id="shortcut"></p>
 
+    <div id="compiling">
+      <div id="bg"></div>
+      <div id="compiling-cont">
+        <p>Przetwarzanie</p>
+        <img src="arts/loading.gif" width="640" height="360" id="compiling-gif">
+      </div>
+    </div>
+    <!-- TODO: ExecCommand - insertText -->
+
     <script src="tippy.all.min.js"></script>
     <script src="script.js"></script>
     <script src="widok.js"></script>
+    <script src="strony.js"></script>
     <script src="input.js"></script>
   </body>
 </html>
