--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,20 @@
     <link href="bin/toolbar.css" rel="stylesheet">
   </head>
   <body>
-    <audio src="arts/smooth-intro.mp3" autoplay></audio>
+
     <div id="all">
       <div id="bg"></div>
       <div id="image"><div></div></div>
       <div id="loading"></div>
     </div>
     <div class="sidebar">
+      <div class="chapter">1</div> <!-- TODO: CHAPTERS -->
       <div class="pages">1</div>
       <div class="words">200</div>
       <div class="letters">500</div>
     </div>
     <div class="menubar">
-        <div class="bar">Odyseja 1.3.1 (alfa): &lt;Brak tytułu&gt; </div>
+        <div class="bar">Odyseja 1.3.2 (alfa): <span>&lt;Brak tytułu&gt;</span> </div>
         <div class="minimize"></div>
         <div class="maximize"></div>
         <div class="exit"></div>
@@ -68,7 +69,7 @@
       </div>
       <div id="view">
 
-        <div id="full-view" title="Pełny Widok">
+        <div id="full-view" title="Pełny widok">
         </div>
 
         <!-- TODO: Add some options here! -->
@@ -76,15 +77,26 @@
       <div id="pages">
         <div id="merge-all" title="Scal wszystkie strony"></div>
       </div>
+      <div id="project">
+        <input id="title" type="text" title="Tytuł utworu" placeholder="<Brak Tytułu>">
+
+        <div id="all-keys">
+          <input id="keys" type="text" title="Słowa kluczowe (oddzielone spacją)" placeholder="<Brak Kluczy>">
+          <p title="Liczba kluczy">0</p>
+        </div>
+
+      </div>
 
     </div>
     <div class="menu">
       <a href="index.html" onclick="return false">Odśwież dokument</a>
+      <button id="open-file" onclick="return false">Otwórz Plik</button>
     </div>
     <div class="menu">
       <button>Narzędzia</button>
       <button>Widok</button>
       <button>Strony</button>
+      <button>Projekt</button>
     </div>
     <div class="full-view">
       <div class="fv-tools">
