--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,8 @@
           <p title="Liczba kluczy">0</p>
         </div>
 
+        <input id="author" type="text" title="Autor utworu" placeholder="<Autor>">
+
       </div>
 
     </div>
