--- a/public/index.html
+++ b/public/index.html
@@ -121,8 +121,10 @@
           <div id="chapter-bg">
             <div id="chapter-tools">
               <p>Rozdziały</p>
-              <div id="ok"></div>
-              <div id="cancel"></div>
+              <div id="edit-chapter">
+                <input type="text" title="Nazwa rozdziału">
+                <div id="trash" title="Usuń rozdział"></div>
+              </div>
             </div>
 
             <div id="chapter-docs">
