--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,7 @@
     <div class="menu">
       <a href="index.html" onclick="return false">Odśwież dokument</a>
       <button id="open-file" onclick="return false">Otwórz Plik</button>
+      <button id="save-file" onclick="return false">Zapisz Plik</button>
     </div>
     <div class="menu">
       <button>Narzędzia</button>
