--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <div class="letters">500</div>
     </div>
     <div class="menubar">
-        <div class="bar">Odyseja 1.3.4 (alfa): <span>&lt;Brak tytułu&gt;</span> </div>
+        <div class="bar">Odyseja 1.3.5 (alfa): <span>&lt;Brak tytułu&gt;</span> </div>
         <div class="minimize"></div>
         <div class="maximize"></div>
         <div class="exit"></div>
@@ -106,6 +106,7 @@
         <span id="trash" title="Usuń strony">
         </span><disabled id="move" disabled="true" title="Musisz zaznaczyć ciąg kartek następujących po sobie"><span id="move-btn" disabled="false" title="Edytor Łańcuchowy"></disabled> <!-- To po to, żeby nie było stresującej spacji -->
         </span>
+        <disabled id="merge" disabled="true" title="Musisz zaznaczyć ciąg kartek następujących po sobie"><span id="merge-sel" title="Scal wybrane strony"></span></disabled>
         <span id="chapter-view" title="Widok wszystkich rozdziałów"></span>
 
           <div id="move-bg">
