--- a/public/index.html
+++ b/public/index.html
@@ -67,6 +67,12 @@
           <div id="justify-full"></div>
         </div>
       </div>
+      <div id="insert">
+
+        <div id="image" title="Wstaw obraz"></div>
+
+
+      </div>
       <div id="view">
 
         <div id="full-view" title="Pełen Widok"></div>
@@ -96,6 +102,7 @@
     </div>
     <div class="menu">
       <button>Narzędzia</button>
+      <button>Wstawianie</button>
       <button>Widok</button>
       <button>Strony</button>
       <button>Projekt</button>
@@ -171,6 +178,7 @@
     <script src="script.js"></script>
     <script src="widok.js"></script>
     <script src="strony.js"></script>
+    <script src="insert.js"></script>
     <script src="input.js"></script>
   </body>
 </html>
