--- a/public/index.html
+++ b/public/index.html
@@ -152,6 +152,9 @@
         </div>
         <iframe name="textField" width="" height="">
         </iframe>
+        <div id="sizer"> <!-- TODO: implement it in CSS -->
+
+        </div>
 
         <div class="move right">
           <span>></span>
