--- a/public/index.html
+++ b/public/index.html
@@ -96,9 +96,11 @@
 
     </div>
     <div class="menu">
-      <a href="index.html" onclick="return false">Odśwież dokument</a>
-      <button id="open-file" onclick="return false">Otwórz Plik</button>
-      <button id="save-file" onclick="return false">Zapisz Plik</button>
+      <a href="index.html" id="reload" onclick="return false" title="Odśwież dokumant"></a>
+      <button id="open-file" onclick="return false" title="Otwórz plik"></button>
+      <button id="save-file" onclick="return false" title="Zapisz Plik"></button>
+      <button id="quick-save" onclick="return false" title="Nadpisz Plik"></button>
+      <button id="settings" title="Ustawienia"></button>
     </div>
     <div class="menu">
       <button>Narzędzia</button>
