--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,16 @@
       <div id="image"><div></div></div>
       <div id="loading"></div>
     </div>
+
+    
     <div class="sidebar">
-      <div class="chapter">Prolog</div> <!-- TODO: CHAPTERS -->
+      <div class="chapter">Prolog</div>
       <div class="pages">1</div>
       <div class="words">200</div>
       <div class="letters">500</div>
     </div>
+
+
     <div class="menubar">
         <div class="bar">Odyseja 1.3.5 (alfa): <span>&lt;Brak tytułu&gt;</span> </div>
         <div class="minimize"></div>
@@ -67,34 +71,29 @@
           <div id="justify-full"></div>
         </div>
       </div>
+
+      <!-- Modes -->
       <div id="insert">
-
         <div id="image" title="Wstaw obraz"></div>
-
-
       </div>
       <div id="view">
-
         <div id="full-view" title="Pełen Widok"></div>
-
-
       </div>
       <div id="pages">
         <div id="merge-all" title="Scal wszystkie strony"></div>
       </div>
       <div id="project">
         <input id="title" type="text" title="Tytuł utworu" placeholder="<Brak Tytułu>">
-
         <div id="all-keys">
           <input id="keys" type="text" title="Słowa kluczowe (oddzielone spacją)" placeholder="<Brak Kluczy>">
           <p title="Liczba kluczy">0</p>
         </div>
-
         <input id="author" type="text" title="Autor utworu" placeholder="<Autor>">
-
       </div>
 
     </div>
+
+
     <div class="menu">
       <a href="index.html" id="reload" onclick="return false" title="Odśwież dokumant"></a>
       <button id="open-file" onclick="return false" title="Otwórz plik"></button>
@@ -102,6 +101,8 @@
       <button id="quick-save" onclick="return false" title="Nadpisz Plik"></button>
       <button id="settings" title="Ustawienia"></button>
     </div>
+
+
     <div class="menu">
       <button>Narzędzia</button>
       <button>Wstawianie</button>
@@ -109,6 +110,8 @@
       <button>Strony</button>
       <button>Projekt</button>
     </div>
+
+
     <div class="full-view">
       <div class="fv-tools">
         <p>Pełen widok</p>
@@ -124,7 +127,6 @@
               <div id="ok"></div>
               <div id="cancel"></div>
             </div>
-
             <div id="move-docs">
             </div>
           </div>
@@ -137,37 +139,32 @@
                 <div id="trash" title="Usuń rozdział"></div>
               </div>
             </div>
-
             <div id="chapter-docs">
             </div>
           </div>
-
       </div>
       <div class="docs"></div>
     </div>
 
+
     <div class="iframe">
       <div id="up">
-
         <div class="move left">
           <span><</span>
         </div>
         <iframe name="textField" width="" height="">
         </iframe>
-        <div id="sizer"> <!-- TODO: implement it in CSS -->
-
+        <div id="sizer">
         </div>
-
         <div class="move right">
           <span>></span>
         </div>
 
       </div>
       <div id="down">
-
       </div>
-
     </div>
+
     <p id="shortcut"></p>
 
     <div id="compiling">
@@ -177,7 +174,6 @@
         <img src="arts/loading.gif" width="640" height="360" id="compiling-gif">
       </div>
     </div>
-    <!-- TODO: ExecCommand - insertText -->
 
     <script src="tippy.all.min.js"></script>
     <script src="script.js"></script>
