--- a/public/index.html
+++ b/public/index.html
@@ -183,25 +183,24 @@
             Ogólne
           </div><div class="themes">
             Wygląd
-          </div><div class="quit">
-            Wyjdź
           </div>
         </div>
         <div id="options">
+          <h1>Ogólne</h1>
           <div class="autosave">
             <span>Autozapis</span>
 
             <div class="checkbox-bg">
               <div class="checkbox">
                 <input type="checkbox" id="one">
-                <label for="one"></label>
+                <label for="one" title="on"></label>
               </div>
             </div>
-            
+
           </div>
           <div class="img-quality">
-            <span>Jakość Obrazów</span>
-            <input type="range" min="0" max="1" step="0.01">
+            <span>Jakość Wstawiania Obrazów</span>
+            <input type="range" min="0" max="1" step="0.01" value="0.5" title="50%">
           </div>
         </div>
       </div>
