--- a/public/index.html
+++ b/public/index.html
@@ -181,18 +181,18 @@
         <div class="tools">
           <div class="general">
             Ogólne
-          </div><div class="themes">
+          </div><div class="themes" disabled>
             Wygląd
           </div>
         </div>
         <div id="options">
           <h1>Ogólne</h1>
           <div class="autosave">
-            <span>Autozapis</span>
+            <span>Autozapis Kopii Zapasowej</span>
 
             <div class="checkbox-bg">
               <div class="checkbox">
-                <input type="checkbox" id="one">
+                <input type="checkbox" id="one" checked>
                 <label for="one" title="on"></label>
               </div>
             </div>
