--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
       <a href="index.html" id="reload" onclick="return false" title="Odśwież dokumant"></a>
       <button id="open-file" onclick="return false" title="Otwórz plik"></button>
       <button id="save-file" onclick="return false" title="Zapisz Plik"></button>
-      <button id="quick-save" onclick="return false" title="Nadpisz Plik"></button>
+      <button id="quick-save" onclick="return false" title="Nadpisz Plik" disabled></button>
       <button id="settings" title="Ustawienia"></button>
     </div>
 
