--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
 
     <div class="menubar">
-        <div class="bar">Odyseja 1.3.5 (alfa): <span>&lt;Brak tytułu&gt;</span> </div>
+        <div class="bar">Odyseja 1.3.6 (alfa): <span>&lt;Brak tytułu&gt;</span> </div>
         <div class="minimize"></div>
         <div class="maximize"></div>
         <div class="exit"></div>
@@ -209,11 +209,11 @@
       </div>
     </div>
 
-    <script src="tippy.all.min.js"></script>
-    <script src="script.js"></script>
-    <script src="widok.js"></script>
-    <script src="strony.js"></script>
-    <script src="insert.js"></script>
-    <script src="input.js"></script>
+    <script src="src/libs/tippy.all.min.js"></script>
+    <script src="src/index/script.js"></script>
+    <script src="src/index/widok.js"></script>
+    <script src="src/index/strony.js"></script>
+    <script src="src/index/insert.js"></script>
+    <script src="src/index/input.js"></script>
   </body>
 </html>
