--- a/app/public/index.html
+++ b/app/public/index.html
@@ -82,7 +82,7 @@
       </div>
       <div id="pages">
         <div id="merge-all" title="Scal wszystkie strony"></div>
-        <div id="print" title="Wydrukuj wszystkie strony"></div>
+        <div id="print" title="Wydrukuj strony"></div>
       </div>
       <div id="project">
         <input id="title" type="text" title="Tytuł utworu" placeholder="<Brak Tytułu>">
