--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,7 +8,6 @@
     <link href="bin/settings.css" rel="stylesheet">
   </head>
   <body>
-
     <div id="all">
       <div id="bg"></div>
       <div id="image"><div></div></div>
@@ -97,7 +96,7 @@
 
 
     <div class="menu">
-      <a href="index.html" id="reload" onclick="return false" title="Odśwież dokumant"></a>
+      <a href="index.html" id="reload" onclick="return false" title="Odśwież dokument"></a>
       <button id="open-file" onclick="return false" title="Otwórz plik"></button>
       <button id="save-file" onclick="return false" title="Zapisz Plik"></button>
       <button id="quick-save" onclick="return false" title="Nadpisz Plik" disabled></button>
