--- a/app/public/index.html
+++ b/app/public/index.html
@@ -215,5 +215,30 @@
     <script src="src/index/strony.js"></script>
     <script src="src/index/insert.js"></script>
     <script src="src/index/input.js"></script>
+    
+    <script>
+    // Require the electron spellchecker
+    const electronSpellchecker = require('electron-spellchecker');
+
+    // Retrieve required properties
+    const SpellCheckHandler = electronSpellchecker.SpellCheckHandler;
+    const ContextMenuListener = electronSpellchecker.ContextMenuListener;
+    const ContextMenuBuilder = electronSpellchecker.ContextMenuBuilder;
+
+    // Configure the spellcheckhandler
+    window.spellCheckHandler = new SpellCheckHandler();
+    window.spellCheckHandler.attachToInput();
+
+    // Start off as "US English, America"
+    window.spellCheckHandler.switchLanguage('en-US');
+
+    // Create the builder with the configured spellhandler
+    let contextMenuBuilder = new ContextMenuBuilder(window.spellCheckHandler);
+
+    // Add context menu listener
+    let contextMenuListener = new ContextMenuListener((info) => {
+        contextMenuBuilder.showPopupMenu(info);
+    });
+</script>
   </body>
 </html>
