--- a/app/public/index.html
+++ b/app/public/index.html
@@ -199,7 +199,7 @@
 
           </div>
           <div class="img-quality">
-            <span>Jakość Wstawiania Obrazów</span>
+            <span>Jakość Wstawiania Obrazów JPG</span>
             <input type="range" min="0" max="1" step="0.01" value="0.5" title="50%">
           </div>
         </div>
