--- a/app/public/index.html
+++ b/app/public/index.html
@@ -82,6 +82,7 @@
       <div id="pages">
         <div id="merge-all" title="Scal wszystkie strony"></div>
         <div id="print" title="Wydrukuj strony"></div>
+        <div id="print-view" title="Podgląd wydruku"><div class="toggle"></div></div>
       </div>
       <div id="project">
         <input id="title" type="text" title="Tytuł utworu" placeholder="<Brak Tytułu>">
