--- a/app/public/index.html
+++ b/app/public/index.html
@@ -250,6 +250,7 @@
     </div>
 
     <script src="src/libs/tippy.all.min.js"></script>
+    <script src="src/libs/popup.js"></script>
     <script src="src/index/script.js"></script>
     <script src="src/index/widok.js"></script>
     <script src="src/index/strony.js"></script>
