--- a/app/public/index.html
+++ b/app/public/index.html
@@ -97,7 +97,7 @@
 
 
     <div class="menu">
-      <a href="index.html" id="reload" onclick="return false" title="Odśwież dokument"></a>
+      <a href="index.html" id="reload" onclick="return false" title="Odnów Dokument"></a>
       <button id="open-file" onclick="return false" title="Otwórz plik"></button>
       <button id="save-file" onclick="return false" title="Zapisz Plik"></button>
       <button id="quick-save" onclick="return false" title="Nadpisz Plik"></button>
