Scrolling fixed & Language support beginned

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Odyssey</title>
-    <link href="bin/master.css" rel="stylesheet">
-    <link href="bin/toolbar.css" rel="stylesheet">
-    <link href="bin/settings.css" rel="stylesheet">
+    <link href="bin/css/master.css" rel="stylesheet">
+    <link href="bin/css/toolbar.css" rel="stylesheet">
+    <link href="bin/css/settings.css" rel="stylesheet">
   </head>
   <body>
     <div id="all">
@@ -85,12 +85,12 @@
         <div id="print-view" title="Podgląd wydruku"><div class="toggle"></div></div>
       </div>
       <div id="project">
-        <input id="title" type="text" title="Tytuł utworu" placeholder="<Brak Tytułu>">
+        <input id="title" type="text" title="Tytuł utworu" placeholder="<Brak tytułu>">
         <div id="all-keys">
-          <input id="keys" type="text" title="Słowa kluczowe (oddzielone spacją)" placeholder="<Brak Kluczy>">
+          <input id="keys" type="text" title="Słowa kluczowe (oddzielone spacją)" placeholder="<Brak kluczy>">
           <p title="Liczba kluczy">0</p>
         </div>
-        <input id="author" type="text" title="Autor utworu" placeholder="<Autor>">
+        <input id="author" type="text" title="Autor utworu" placeholder="<Brak autora>">
       </div>
 
     </div>
@@ -190,7 +190,7 @@
           <h1>Ogólne</h1>
 
           <div class="autosave">
-            <span>Autozapis Kopii Zapasowej</span>
+            <span>Autozapis kopii zapasowej</span>
             <div class="checkbox-bg">
               <div class="checkbox">
                 <input type="checkbox" id="one" checked>
@@ -200,7 +200,7 @@
           </div>
 
           <div class="img-quality">
-            <span>Jakość Wstawiania Obrazów JPG</span>
+            <span>Jakość wstawiania obrazów JPG</span>
             <input type="range" min="0" max="1" step="0.01" value="0.5" title="50%">
           </div>
 
