--- a/app/public/print.html
+++ b/app/public/print.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="bin/print.css" rel="stylesheet">
+    <link href="bin/css/print.css" rel="stylesheet">
     <script src="src/print/print.js"></script>
   </head>
   <body>
