Resizer Top CSS

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -154,8 +154,13 @@
         <div class="move left">
           <span><</span>
         </div>
-        <iframe name="textField" width="" height="">
-        </iframe>
+        <div id="iframe">
+          <div class="resizer top"></div>
+          <div class="resizer left"></div>
+          <div class="resizer bottom"></div>
+          <iframe name="textField" width="" height="">
+          </iframe>
+        </div>
         <div id="sizer">
         </div>
         <div class="move right">
@@ -257,5 +262,6 @@
     <script src="src/index/insert.js"></script>
     <script src="src/index/input.js"></script>
     <script src="src/index/spell.js"></script>
+    <script src="src/index/resizer.js"></script>
   </body>
 </html>
