Resizer right added

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -173,6 +173,7 @@
 
     <div class="resizer top"></div>
     <div class="resizer left"></div>
+    <div class="resizer right"></div>
     <div class="resizer bottom"></div>
 
     <div id="compiling">
