Resizer Top Movement

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,7 +7,7 @@
     <link href="bin/css/toolbar.css" rel="stylesheet">
     <link href="bin/css/settings.css" rel="stylesheet">
   </head>
-  <body>
+  <body  draggable="false" ondragstart="return false">
     <div id="all">
       <div id="bg"></div>
       <div id="image"><div></div></div>
