--- a/app/public/index.html
+++ b/app/public/index.html
@@ -155,8 +155,7 @@
           <span><</span>
         </div>
         <div id="iframe">
-          <iframe name="textField" width="" height="">
-          </iframe>
+          <iframe name="textField" width="" height=""></iframe>
         </div>
         <div id="sizer">
         </div>
