--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="src/style.css">
   </head>
   <body>
-    <h1>Odyssey page</h1>
+    <h1 id="welcome1">Witaj w Odysei</h1>
+    <div id="cont">
+      <h2 id="welcome2">Nowy, Darmowy, Odjechany...</h2>
+      <h2 id="welcome2">Edytor Tekstu</h2>
+    </div>
+    <script src="src/script.js" charset="utf-8"></script>
   </body>
 </html>
