--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Odyssey</title>
+    <link rel="shortcut icon" href="images/logo.png">
     <link rel="stylesheet" href="src/style.css">
   </head>
   <body draggable="false" ondragstart="return false">
